--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="/css/deck.hearthstone.css">
 <link rel="stylesheet" href="/fonts/fonts.css">
+<link rel="icon" href="/img/star.png" type="image/x-icon" />
 </head>
 <body>
 <section class="section-decklist">
